--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                 display: inline-flex !important;
             }
     </style>
-    <script src="https:/https://morgana2022--acceptance.sandbox.lightning.force.com//lightning/lightning.out.js"></script>
+    <script src="https:/https://morgana2022--acceptance.sandbox.lightning.force.com/lightning/lightning.out.js"></script>
     <script>
         $Lightning.use("runtime_appointmentbooking:lightningOutGuest",    // name of the Lightning app
             function() {                  
