--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
             function() {                  
                 $Lightning.createComponent(
                    "lightning:flow", // top-level component of your app
-                    { },                  // attributes to set on the component when created
+             { 
+                    inputVariables : [
+                        {
+                            name : "ValueFromFlow",
+                            type : "String",
+                            value : "IT WORKS"
+                        }
+                    ]
+                },                  // attributes to set on the component when created
                     "lightningLocator",   // the DOM location to insert the component
                     function(cmp) {
                         console.log('Hi from callback');// callback when component is created and active on the page
