--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             function() {                  
                 $Lightning.createComponent(
                    "lightning:flow", // top-level component of your app
-                    {ValueFromFlow:"IT WORKS"},   // attributes to set on the component when created
+                    { 
+                        ValueFromFlow: 'Default value' // Set the default value for ValueFromFlow parameter
+                    },                  
                     "lightningLocator",   // the DOM location to insert the component
                     function(cmp) {
                         console.log('Hi from callback');// callback when component is created and active on the page
