--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 $Lightning.createComponent(
                    "lightning:flow", // top-level component of your app
                     { 
-                        ValueFromFlow: 'Default value' // Set the default value for ValueFromFlow parameter
+                        ValueFromSite: 'Default value' // Set the default value for ValueFromSite parameter
                     },                  
                     "lightningLocator",   // the DOM location to insert the component
                     function(cmp) {
