--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                 display: inline-flex !important;
             }
     </style>
-    <script src="https://morgana.lightning.force.com/lightning/lightning.out.js"></script>
+    <script src="https://morgana2022--acceptance.sandbox.lightning.force.com/lightning/lightning.out.js"></script>
     <script>
         $Lightning.use("runtime_appointmentbooking:lightningOutGuest",    // name of the Lightning app
             function() {                  
@@ -24,7 +24,7 @@
                         cmp.startFlow("Inbound_New_Guest_Appointment_custom");
                     }
                 );
-            }, "https://morgana.my.site.com"  // Community endpoint
+            }, "https://morgana2022--acceptance.sandbox.my.site.com"  // Community endpoint
         );
     </script>
 <div id="lightningLocator"></div>
