--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
                 $Lightning.createComponent(
                    "lightning:flow", // top-level component of your app
                     { 
-                        ValueFromSite: 'Default value' // Set the default value for ValueFromSite parameter
-                    },                  
+                    inputVariables : [
+                        {
+                            name : "ValueFromSite",
+                            type : "String",
+                            value : "123"
+                        }
+                    ]
+                },                  
                     "lightningLocator",   // the DOM location to insert the component
                     function(cmp) {
                         console.log('Hi from callback');
