--- a/index.html
+++ b/index.html
@@ -15,17 +15,16 @@
             function() {                  
                 $Lightning.createComponent(
                    "lightning:flow", // top-level component of your app
-                    { 
-                    inputVariables : [
-                        {
-                            name : "ValueFromSite",
-                            type : "String",
-                            value : "123"
-                        }
-                    ]
-                },                  
+                    {},                  
                     "lightningLocator",   // the DOM location to insert the component
                     function(cmp) {
+                        var inputVariables = [
+                                {
+                                    name : 'ValueFromSite',
+                                    type : 'String',
+                                    value : 'test'
+                                }
+                                ];
                         console.log('Hi from callback');
                         cmp.startFlow("Inbound_New_Guest_Appointment_custom", inputVariables);
                     }
