--- a/index.html
+++ b/index.html
@@ -21,6 +21,44 @@
                 display: inline-flex !important;
             }
     </style>
+
+
+
+<script>
+        function fireEvent() {
+            // Fire event to Google Tag Manager
+            console.log('FIRING EVENT');
+
+            console.log('GTMDATA - EVENT::::: ' + window.event);
+            console.log('GTMDATA - CATEGORY::::: ' + window.eventCategory);
+            console.log('GTMDATA - ACTION::::: ' + window.eventAction);
+            console.log('GTMDATA - LABEL::::: ' + window.eventLabel);
+
+            let gtmData = {
+                event: 'salesforce_event',
+                eventCategory: 'TEST',
+                eventAction: 'TEST',
+                eventLabel: 'TEST'
+            };
+
+            console.log('DATALAYER BEFORE PUSHING:::::: ', JSON.stringify(window.dataLayer));
+            // Push the data to the dataLayer
+            window.dataLayer = window.dataLayer || [];
+            window.dataLayer.push(gtmData);
+            console.log('DATALAYER AFTER PUSHING:::::: ', JSON.stringify(window.dataLayer));
+        }
+
+        // Set the values for the event properties
+        window.event = 'sample_event';
+        window.eventCategory = 'sample_category';
+        window.eventAction = 'sample_action';
+        window.eventLabel = 'sample_label';
+
+        // Execute the fireEvent function
+        fireEvent();
+    </script>
+
+
     <script src="https://morgana2022--acceptance.sandbox.lightning.force.com/lightning/lightning.out.js"></script>
     <script>
         $Lightning.use("runtime_appointmentbooking:lightningOutGuest",    // name of the Lightning app
