--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
 
 
-    <a href="#" name="button1" onclick="window.dataLayer.push({
-        'event': 'salesforce_event',
-        'eventCategory': 'TEST',
-        'eventAction': 'TEST',
-        'eventLabel': 'TEST'
-      }); return false;">Button 1</a>
+<a href="#" name="button1" style="color:blue; font-size:20px; text-decoration: underline;" onclick="window.dataLayer.push({
+    'event': 'salesforce_event',
+    'eventCategory': 'TEST',
+    'eventAction': 'TEST',
+    'eventLabel': 'TEST'
+  }); return false;">Button 1</a>
 
 
     <script src="https://morgana2022--acceptance.sandbox.lightning.force.com/lightning/lightning.out.js"></script>
