--- a/index.html
+++ b/index.html
@@ -23,13 +23,12 @@
     </style>
 
 
-
-<a href="#" name="button1" style="color:blue; font-size:20px; text-decoration: underline;" onclick="window.dataLayer.push({
-    'event': 'salesforce_event',
-    'eventCategory': 'TEST',
-    'eventAction': 'TEST',
-    'eventLabel': 'TEST'
-  }); return false;">Button 1</a>
+    <script>
+        // Replace 'myCustomEvent' with your actual custom event name
+        dataLayer.push({
+          'event': 'salesforce_event'
+        });
+      </script>
 
 
     <script src="https://morgana2022--acceptance.sandbox.lightning.force.com/lightning/lightning.out.js"></script>
