--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <h1>test</h1>
     <!-- Google Tag Manager (noscript) -->
-<!-- <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T82VLNR"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript> -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T82VLNR"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <style>
             .slds-visual-picker_vertical .slds-visual-picker__figure {
@@ -55,5 +55,6 @@
             }, "https://morgana2022--acceptance.sandbox.my.site.com"  // Community endpoint
         );
     </script>
+    
 <div id="lightningLocator"></div>
 </body>
