--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <head>
     <!-- Google Tag Manager -->
-<!-- <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-T82VLNR');</script> -->
+    })(window,document,'script','dataLayer','GTM-T82VLNR');</script>
     <!-- End Google Tag Manager -->
 </head>
 <body>
@@ -24,12 +24,12 @@
     </style>
 
 
-    <!-- <script>
+    <script>
         // Replace 'myCustomEvent' with your actual custom event name
         dataLayer.push({
           'event': 'salesforce_event'
         });
-      </script> -->
+      </script>
 
 
     <script src="https://morgana2022--acceptance.sandbox.lightning.force.com/lightning/lightning.out.js"></script>
