--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
             }
     </style>
 
-
+<!-- 
     <script>
         // Replace 'myCustomEvent' with your actual custom event name
         dataLayer.push({
           'event': 'salesforce_event'
         });
-      </script>
+      </script> -->
 
 
     <script src="https://morgana2022--acceptance.sandbox.lightning.force.com/lightning/lightning.out.js"></script>
