Update index.html to use css file instead of scss

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         })(window,document,'script','dataLayer','GTM-T82VLNR');
     </script>
     <!-- End Google Tag Manager -->
-    <link rel="stylesheet" href="sass/main.scss">
+<!--    <link rel="stylesheet" href="sass/main.scss">-->
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <h1>test</h1>
