--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         window.addEventListener('message', function(event) {
 
             console.log('Received message:  ', event.data);
-            if (event.data.key === 'MyMessage') {
+            if (event.data.key === 'sfgtm') {
                 console.log('EVENTHANDLINGLOGIC would run here lalalalaa');
                     // Replace 'myCustomEvent' with your actual custom event name
                     dataLayer.push({
