--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     email:event.data.email,
                     first_name:event.data.first_name,
                     last_name:event.data.last_name,
-                    name:event.data.name,
+                    event:event.data.event,
                     store:event.data.store,
                     time:event.data.time
                 })
