--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 
                 console.log('Received event: ', event);
 
-                dataLayer.push({
+                <!-- dataLayer.push({
                     event: 'salesforce_event',
                     date: event.data.date,
                     email:event.data.email,
@@ -42,7 +42,7 @@
                     name:event.data.name,
                     store:event.data.store,
                     time:event.data.time
-                })
+                }) -->
             }
         });
     </script>
