--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
                     {},
                     "lightningLocator",   // the DOM location to insert the component
                     function(cmp) {
-                        <!-- var inputVariables = [
-                                {
-                                    name : 'ValueFromSite',
-                                    type : 'String',
-                                    value : 'test'
-                                }
-                                ]; -->
+                        // var inputVariables = [
+                         //       {
+                         //           name : 'ValueFromSite',
+                         //           type : 'String',
+                         //           value : 'test'
+                         //       }
+                         //       ];
                         console.log('Hi from callback');
                         cmp.startFlow("Inbound_New_Guest_Appointment_custom");
                         //cmp.startFlow("Inbound_New_Guest_Appointment_custom", inputVariables);
