--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
-    <!-- <script>
+    <script>
         window.addEventListener('message', function(event) {
             if(event.data.event=='Salesforce_Scheduler') {
                 
@@ -45,7 +45,7 @@
                 })
             }
         });
-    </script> -->
+    </script>
 
     <script src="https://morgana2022--acceptance.sandbox.lightning.force.com/lightning/lightning.out.js"></script>
     <script>
