--- a/index.html
+++ b/index.html
@@ -56,15 +56,8 @@
                     {},
                     "lightningLocator",   // the DOM location to insert the component
                     function(cmp) {
-                         var inputVariables = [
-                                {
-                                    name : 'ValueFromSite',
-                                    type : 'String',
-                                    value : 'hello from website'
-                                }
-                                ];
                         console.log('Hi from callback');
-                        cmp.startFlow("Inbound_New_Guest_Appointment_custom", inputVariables);
+                        cmp.startFlow("Inbound_New_Guest_Appointment_custom");
                     }
                 );
             }, "https://morgana2022--acceptance.sandbox.my.site.com"  // Community endpoint
