--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
             display: inline-flex !important;
         }
     </style>
-
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -19,8 +18,11 @@
     </script>
     <!-- End Google Tag Manager -->
 
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <h1>test2</h1>
+    
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NSR8848Z"
         height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
