--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <h1>test2</h1>
-    
+    <h1>test3</h1>
+
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NSR8848Z"
         height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
-    <script>
+    <!-- <script>
         window.addEventListener('message', function(event) {
             if(event.data.event=='Salesforce_Scheduler') {
                 
@@ -46,7 +46,7 @@
                 })
             }
         });
-    </script>
+    </script> -->
 
     <script src="https://morgana2022--acceptance.sandbox.lightning.force.com/lightning/lightning.out.js"></script>
     <script>
