--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             display: inline-flex !important;
         }
     </style>
+
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -21,14 +22,14 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <h1>test3</h1>
-
+    <h1>test5</h1>
+    
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NSR8848Z"
         height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
-    <!-- <script>
+    <script>
         window.addEventListener('message', function(event) {
             if(event.data.event=='Salesforce_Scheduler') {
                 
@@ -46,7 +47,7 @@
                 })
             }
         });
-    </script> -->
+    </script>
 
     <script src="https://morgana2022--acceptance.sandbox.lightning.force.com/lightning/lightning.out.js"></script>
     <script>
