Add ergosleep css

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     </script>
     <!-- End Google Tag Manager -->
 
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/ergosleep.css">
 </head>
 <body>
     <h1>test5</h1>
-    
+
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NSR8848Z"
         height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -32,7 +32,7 @@
     <script>
         window.addEventListener('message', function(event) {
             if(event.data.event=='Salesforce_Scheduler') {
-                
+
                 console.log('Received event: ', event);
 
                 dataLayer.push({
