--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         });
     </script>
 
-    <script src="https://morgana2022--acceptance.sandbox.lightning.force.com/lightning/lightning.out.js"></script>
+    <script src="https://innovation-connect-2296.scratch.lightning.force.com/lightning/lightning.out.js"></script>
     <script>
         $Lightning.use("runtime_appointmentbooking:lightningOutGuest",    // name of the Lightning app
             function() {
@@ -60,16 +60,16 @@
                     function(cmp) {
                          var inputVariables = [
                                 {
-                                    name : 'ValueFromSite',
+                                    name : 'ext_brand',
                                     type : 'String',
-                                    value : 'hello from webstite'
+                                    value : 'Morgana'
                                 }
                                 ];
                         console.log('Hi from callback');
                         cmp.startFlow("Inbound_New_Guest_Appointment_custom", inputVariables);
                     }
                 );
-            }, "https://morgana2022--acceptance.sandbox.my.site.com"  // Community endpoint
+            }, "	https://innovation-connect-2296.scratch.my.site.com"  // Community endpoint
         );
     </script>
 
