Update partner pages css of ergosleep and morgana

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </script>
     <!-- End Google Tag Manager -->
 
-    <link rel="stylesheet" href="css/ergosleep.css">
+    <link rel="stylesheet" href="css/morgana.css">
 </head>
 <body>
     <h1>test5</h1>
