--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         });
     </script>
 
-    <script src="https://innovation-connect-2296.scratch.lightning.force.com/lightning/lightning.out.js"></script>
+    <script src="https://morgana2022--acceptance.sandbox.lightning.force.com/lightning/lightning.out.js"></script>
     <script>
         $Lightning.use("runtime_appointmentbooking:lightningOutGuest",    // name of the Lightning app
             function() {
@@ -69,7 +69,7 @@
                         cmp.startFlow("Inbound_New_Guest_Appointment_custom", inputVariables);
                     }
                 );
-            }, "	https://innovation-connect-2296.scratch.my.site.com"  // Community endpoint
+            }, "https://morgana2022--acceptance.sandbox.my.site.com"  // Community endpoint
         );
     </script>
 
