--- a/index.html
+++ b/index.html
@@ -62,7 +62,21 @@
                                 {
                                     name : 'ext_brand',
                                     type : 'String',
-                                    value : 'Morgana'
+                                    value : ''
+                                },
+                                {
+                                    name : 'ext_client_id',
+                                    type : 'String',
+                                    value : ''
+                                },
+                                                             {
+                                    name : 'ext_session_id',
+                                    type : 'String',
+                                    value : ''
+                                },                                {
+                                    name : 'ext_page',
+                                    type : 'String',
+                                    value : ''
                                 }
                                 ];
                         console.log('Hi from callback');
