--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
                                 {
                                     name : 'ext_brand',
                                     type : 'String',
-                                    value : ''
+                                    value : 'Morgana'
                                 },
                                 {
                                     name : 'ext_client_id',
                                     type : 'String',
-                                    value : ''
+                                    value : 'test_from_github_page'
                                 },
                                                              {
                                     name : 'ext_session_id',
                                     type : 'String',
-                                    value : ''
+                                    value : 'test_from_github_page'
                                 },                                {
                                     name : 'ext_page',
                                     type : 'String',
-                                    value : ''
+                                    value : 'test_from_github_page'
                                 }
                                 ];
                         console.log('Hi from callback');
