--- a/index.html
+++ b/index.html
@@ -71,9 +71,23 @@
                     function(cmp) {
                          var inputVariables = [
                                 {
-                                    name : 'ValueFromSite',
+                                    name : 'ext_brand',
                                     type : 'String',
-                                    value : 'hello from webstite'
+                                    value : ''
+                                },
+                                {
+                                    name : 'ext_client_id',
+                                    type : 'String',
+                                    value : ''
+                                },
+                                                             {
+                                    name : 'ext_session_id',
+                                    type : 'String',
+                                    value : ''
+                                },                                {
+                                    name : 'ext_page',
+                                    type : 'String',
+                                    value : ''
                                 }
                                 ];
                         console.log('Hi from callback');
