--- a/index.html
+++ b/index.html
@@ -73,21 +73,21 @@
                                 {
                                     name : 'ext_brand',
                                     type : 'String',
-                                    value : ''
+                                    value : 'Morgana'
                                 },
                                 {
                                     name : 'ext_client_id',
                                     type : 'String',
-                                    value : ''
+                                    value : 'mock_client_id'
                                 },
                                                              {
                                     name : 'ext_session_id',
                                     type : 'String',
-                                    value : ''
+                                    value : 'mock_session_id'
                                 },                                {
                                     name : 'ext_page',
                                     type : 'String',
-                                    value : ''
+                                    value : 'https://oleg-mastriukov.github.io/scheduler2/'
                                 }
                                 ];
                         console.log('Hi from callback');
