--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </script>
     <!-- End Google Tag Manager -->
 
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/morgana.css">
 </head>
 
 
