--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <!-- !!!! The most important part, this is an example of the listener that takes the event from Scheduler/Salesforce and reprocesses this to GTM / GA by publishing to the data layer -->
     <script>
         window.addEventListener('message', function(event) {
+            console.log('event.data.event: ', event.data.event);
             if(event.data.event=='Salesforce_Scheduler') {
                 
                 console.log('Received event: ', event);
