--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
 
     <!-- !!!! The most important part, this is an example of the listener that takes the event from Scheduler/Salesforce and reprocesses this to GTM / GA by publishing to the data layer -->
     <script>
+        console.log('Listener starts here');
         window.addEventListener('message', function(event) {
+            console.log('Listener started');
             console.log('event.data.event: ', event.data.event);
             if(event.data.event=='Salesforce_Scheduler') {
                 
